# Convoke

./: .env.example  .gitignore  LICENSE  README.md  design.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_pgvector_extension.py  002_telegram_core.py  003_memory.py  004_agents.py  005_mcp.py  006_workflows.py  007_gaps_polish.py  008_workflow_observability.py  009_mcp_oauth.py  010_chunk_version.py  011_per_trigger_cursor.py  012_auto_rearm.py  013_runtime_settings.py  014_chat_settings.py  015_intent_episodes.py  016_message_reply_ref.py  017_media_attachments.py  018_model_library.py  019_embedding_state.py  020_distiluse_default.py  021_chat_threads.py  022_agent_run_tool_calls.py  023_chat_members.py  024_schema_reconcile.py  025_embedder_roles_hybrid.py  026_member_is_bot.py  027_role_reasoning_effort.py  028_connected_model_api.py
backend/app/: main.py  members.py  threads.py  worker.py
backend/app/agents/: context.py  deps.py  loop.py  mcp.py  mcp_oauth.py  (+3 more)
backend/tests/: conftest.py  test_agent.py  test_audit_api.py  test_audit_import.py  test_audit_intent.py  test_audit_memory.py  test_audit_runtime.py  test_auth.py  test_chunker.py  test_embeddings_swap.py  test_format.py  test_gateway.py  test_handlers.py  test_import.py  test_intent_prompts.py  test_intent_replay.py  test_intent_state.py  test_mcp.py  test_mcp_oauth.py  test_media_loop.py  test_media_render.py  test_media_status.py  test_members.py  test_models.py  test_providers.py  test_threads.py  test_workflows.py
(+108 files in other folders)
