[project]
name = "convoke-backend"
version = "0.1.0"
description = "Convoke — in-chat assistant orchestration platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "itsdangerous>=2.2",
    "cryptography>=43.0",
    "aiogram>=3.15",
    "pgvector>=0.3",
    "sentence-transformers>=3.0",
    "ijson>=3.3",
    "python-multipart>=0.0.9",
    "pydantic-ai-slim[mcp,openai]>=2,<3",
    "croniter>=6.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.6",
    "fastmcp-slim[server]>=3.4.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
